--- a/Servicio/Servicio/empleos.html
+++ b/Servicio/Servicio/empleos.html
@@ -8,391 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <style>
-        :root {
-            --gray-800: #235B4E;
-            --gray-100: #f3f4f6;
-            --gray-300: #d1d5db;
-            --gray-500: #6b7280;
-            --primary-color: #235B4E;
-            --secondary-color: #BC955C;
-            --bg-light: var(--gray-100);
-            --text-dark: var(--gray-800);
-            --text-light: #ffffff;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        body {
-            background-color: var(--bg-light);
-            color: var(--text-dark);
-        }
-
-        header {
-            background-color: var(--gray-800);
-            color: var(--text-light);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            animation: fadeDown 0.8s ease-out;
-        }
-
-        header h1 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 1.8rem;
-        }
-
-        header nav a {
-            color: var(--text-light);
-            text-decoration: none;
-            margin-left: 1rem;
-            font-weight: 600;
-            transition: color 0.3s;
-        }
-
-        header nav a:hover {
-            color: var(--secondary-color);
-        }
-
-        .nav-links {
-            background-color: #235B4E;
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            padding: 0.5rem 0;
-            border-top: 2px solid #BC955C;
-        }
-
-        .nav-links a {
-            color: var(--text-light);
-            text-decoration: none;
-            font-size: 0.9rem;
-            transition: color 0.3s;
-        }
-
-        .nav-links a:hover {
-            color: var(--secondary-color);
-        }
-
-        main {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-            display: flex;
-            gap: 2rem;
-        }
-
-        .filters {
-            background: #ffffff;
-            padding: 1.5rem;
-            border-radius: 8px;
-            border: 1px solid rgba(0, 0, 0, 0.3);
-            flex: 0 0 280px;
-            height: fit-content;
-        }
-
-        .filters h2 {
-            margin-bottom: 1rem;
-        }
-
-        #filter-form {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .filter-group {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .filter-group label {
-            font-weight: 600;
-            margin-bottom: 0.3rem;
-        }
-
-        .filter-group select,
-        .filter-group input {
-            padding: 0.5rem;
-            border: 1px solid var(--gray-300);
-            border-radius: 4px;
-            font-size: 0.95rem;
-        }
-
-        #filter-form button {
-            margin-top: 1rem;
-            background-color: white;
-            color: #235B4E;
-            border: 2px solid var(--primary-color);
-            padding: 0.6rem 1.2rem;
-            border-radius: 4px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        #filter-form button:hover {
-            background-color: #235B4E;
-            color: white;
-        }
-
-        .job-listings {
-            flex: 1;
-        }
-
-        #search-title {
-            font-size: 1.6rem;
-            color: #235B4E;
-            margin-bottom: 1rem;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .job-card {
-            background: white;
-            padding: 1.5rem;
-            border: 1px solid #ccc;
-            border-left: 5px solid #BC955C;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-            margin-bottom: 2rem;
-            position: relative;
-            font-family: 'Segoe UI', sans-serif;
-            min-height: 300px;
-        }
-
-        .job-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: start;
-            margin-bottom: 1rem;
-        }
-
-        .job-header h3 {
-            margin: 0;
-            font-size: 1.4rem;
-            color: #2c3e50;
-        }
-
-        .job-age {
-            text-align: right;
-            font-size: 0.95rem;
-            color: #555;
-        }
-
-        .job-card p {
-            margin: 0.4rem 0;
-            color: #444;
-            font-size: 1rem;
-        }
-
-        .job-card .location {
-            font-style: italic;
-            color: #7f8c8d;
-            font-size: 0.9rem;
-        }
-
-        .job-details {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 1rem;
-            background: #f7f7f7;
-            padding: 0.8rem;
-            border-radius: 6px;
-            font-size: 0.95rem;
-        }
-
-        .job-details p {
-            flex: 1;
-            margin: 0;
-            padding: 0 1rem;
-            text-align: center;
-            border-right: 1px solid #ddd;
-        }
-
-        .job-details p:last-child {
-            border-right: none;
-        }
-
-        .job-salary {
-            position: absolute;
-            bottom: 1rem;
-            right: 1.5rem;
-            text-align: right;
-            font-size: 1rem;
-            color: #2c3e50;
-            font-weight: bold;
-        }
-
-        footer {
-            background-color: var(--gray-800);
-            color: #ccc;
-            text-align: center;
-            padding: 1rem;
-            font-size: 0.85rem;
-        }
-
-        @media (min-width: 600px) {
-            .search-form .fields {
-                flex-direction: row;
-            }
-
-            .search-form .fields input[type="text"] {
-                flex: 1;
-            }
-        }
-
-        @keyframes slideShow {
-
-            0%,
-            20% {
-                transform: translateX(0%);
-            }
-
-            25%,
-            45% {
-                transform: translateX(-100%);
-            }
-
-            50%,
-            70% {
-                transform: translateX(-200%);
-            }
-
-            80% {
-                transform: translateX(-100%);
-            }
-
-            90%,
-            100% {
-                transform: translateX(0%);
-            }
-        }
-
-        @media (max-width: 768px) {
-
-            .carousel-item,
-            .carousel-item.reverse {
-                flex-direction: column;
-                height: auto;
-            }
-
-            .carousel-image,
-            .carousel-content {
-                flex: none;
-                width: 100%;
-                height: 200px;
-            }
-
-            .carousel-content {
-                height: auto;
-                padding: 1.5rem;
-            }
-        }
-
-        .bordered-link {
-            border: 1px solid rgba(255, 255, 255, 0.6);
-            padding: 0.4rem 0.8rem;
-            border-radius: 4px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .bordered-link:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            color: var(--secondary-color);
-        }
-
-        /* === Animaciones Generales === */
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.8s ease, transform 0.8s ease;
-        }
-
-        .fade-in.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        @keyframes fadeUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeDown {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes slideInRight {
-            from {
-                opacity: 0;
-                transform: translateX(100px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        @keyframes slideInLeft {
-            from {
-                opacity: 0;
-                transform: translateX(-100px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-
-        @keyframes slideInUp {
-            from {
-                opacity: 0;
-                transform: translateY(100px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .slide-in-right,
-        .slide-in-left,
-        .slide-in-up {
-            opacity: 0;
-        }
-
-        .slide-in-right.visible {
-            animation: slideInRight 0.8s ease forwards;
-        }
-
-        .slide-in-left.visible {
-            animation: slideInLeft 0.8s ease forwards;
-        }
-
-        .slide-in-up.visible {
-            animation: slideInUp 0.8s ease forwards;
-        }
-    </style>
-
+    <link rel="stylesheet" href="../style/style.css" />
 </head>
 
 <body>
@@ -521,178 +137,16 @@
         </div>
     </div>
 
-    <footer>
-        &copy; 2025 Portal de Empleo - Todos los derechos reservados.
-    </footer>
+<footer>
+    &copy; 2025 Portal de Empleo - Todos los derechos reservados.
+    <div class="footer-links" style="margin-top: 10px;">
+        <a href="#">Politicas y Condiciones</a> &nbsp;|&nbsp;
+        <a href="#">Aviso de Privacidad</a> &nbsp;|&nbsp;
+        <a href="#">Ayuda</a>
+    </div>
+</footer>
 
-    <script>
-        let empleosSimulados = [];
-
-        fetch('vacantes.json')
-            .then(res => res.json())
-            .then(data => {
-                empleosSimulados = data;
-
-                const resultadosIniciales = empleosSimulados.filter(coincideConBusqueda);
-                mostrarResultados(resultadosIniciales);
-
-                // Mover aquí el listener:
-                ordenarSelect.addEventListener('change', () => {
-                    let listaOrdenada = [...empleosSimulados].filter(coincideConBusqueda);
-                    const criterio = ordenarSelect.value;
-
-                    switch (criterio) {
-                        case 'salarios':
-                            listaOrdenada.sort((a, b) => b.salario - a.salario);
-                            break;
-                        case 'fecha':
-                            listaOrdenada.sort((a, b) => new Date(b.fechaPublicacion) - new Date(a.fechaPublicacion));
-                            break;
-                        case 'experiencia':
-                            listaOrdenada.sort((a, b) => {
-                                const expA = parseInt(a.experiencia) || 0;
-                                const expB = parseInt(b.experiencia) || 0;
-                                return expB - expA;
-                            });
-                            break;
-                    }
-
-                    mostrarResultados(listaOrdenada);
-                });
-            })
-            .catch(err => console.error("Error cargando vacantes.json", err));
-
-        function crearCard(empleo) {
-            const card = document.createElement('div');
-            card.className = 'job-card';
-
-            const isFavorito = JSON.parse(localStorage.getItem('favoritos') || '[]')
-                .some(fav => fav.titulo === empleo.titulo && fav.empresa === empleo.empresa);
-
-            card.innerHTML = `
-            <div class="job-header">
-                <div>
-                    <h3>
-                        ${empleo.titulo} 
-                        <a href="#guardar" title="Guardar en favoritos" style="text-decoration: none; margin-left: 200px;">
-                            <i class="fa-bookmark fa ${isFavorito ? 'fas' : 'far'} favorito-icon" 
-                            style="cursor: pointer; color: #235B4E; font-size: 16px;"></i>
-                        </a>
-                        <a href="#ubicacion" title="Ubicación" style="text-decoration: none; margin-left: 50px;">
-                            <i class="fas fa-map-marker-alt" 
-                            style="cursor: pointer; color: #235B4E; font-size: 16px;"></i>
-                        </a>
-                    </h3>
-                    <p><strong>${empleo.empresa}</strong></p>
-                    <p class="location">${empleo.ubicacion}</p>
-                </div>
-                <div class="job-age">
-                    <p><strong>Edad</strong><br>${empleo.edad} años</p>
-                </div>
-            </div>
-
-            <p>${empleo.descripcion}</p>
-
-            <div class="job-details">
-                <p><strong>Escolaridad</strong><br>${empleo.escolaridad}</p>
-                <p><strong>Experiencia</strong><br>${empleo.experiencia}</p>
-                <p><strong>Discapacidad</strong><br>${empleo.discapacidad}</p>
-            </div>
-
-            <div class="job-salary">
-                <p><strong>Salario</strong><br>$${empleo.salario} MXN</p>
-            </div>
-        `;
-
-            const starIcon = card.querySelector('.favorito-icon');
-            starIcon.addEventListener('click', () => {
-                toggleFavorito(empleo, starIcon);
-            });
-
-            document.getElementById('job-results').appendChild(card);
-        }
-
-        document.getElementById('filter-form').addEventListener('submit', (e) => {
-            e.preventDefault();
-
-            const tipo = document.getElementById('tipo').value;
-            const escolaridad = document.getElementById('escolaridad').value;
-            const discapacidad = document.getElementById('discapacidad').value;
-            const edad = parseInt(document.getElementById('edad').value) || 0;
-            const salario = parseInt(document.getElementById('salario').value) || 0;
-
-            const filtrados = empleosSimulados.filter(empleo => {
-                const titulo = empleo.titulo.toLowerCase();
-                const ubicacion = empleo.ubicacion.toLowerCase();
-
-                const coincideBusqueda = titulo.includes(paramQue) && ubicacion.includes(paramDonde);
-
-                return (
-                    coincideBusqueda &&
-                    (tipo === "" || empleo.tipo === tipo) &&
-                    (escolaridad === "" || empleo.escolaridad === escolaridad) &&
-                    (discapacidad === "" || empleo.discapacidad === discapacidad) &&
-                    (edad === 0 || empleo.edad >= edad) &&
-                    (salario === 0 || empleo.salario >= salario)
-                );
-            });
-
-            mostrarResultados(filtrados);
-        });
-
-        function mostrarResultados(lista) {
-            const resultados = document.getElementById('job-results');
-            resultados.innerHTML = "";
-            if (lista.length === 0) {
-                resultados.innerHTML = "<p>No se encontraron resultados.</p>";
-                return;
-            }
-            lista.forEach(crearCard);
-        }
-
-        // Extraer parámetros de la URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const paramQue = urlParams.get("que")?.toLowerCase() || "";
-        const paramDonde = urlParams.get("donde")?.toLowerCase() || "";
-
-        function coincideConBusqueda(empleo) {
-            const titulo = empleo.titulo.toLowerCase();
-            const ubicacion = empleo.ubicacion.toLowerCase();
-            return titulo.includes(paramQue) && ubicacion.includes(paramDonde);
-        }
-
-        const resultadosIniciales = empleosSimulados.filter(coincideConBusqueda);
-
-        mostrarResultados(resultadosIniciales);
-    </script>
-
-    <script>
-        const ordenarSelect = document.getElementById('ordenar');
-
-        ordenarSelect.addEventListener('change', () => {
-            let listaOrdenada = [...empleosSimulados].filter(coincideConBusqueda);
-            const criterio = ordenarSelect.value;
-
-            switch (criterio) {
-                case 'salarios':
-                    listaOrdenada.sort((a, b) => b.salario - a.salario);
-                    break;
-                case 'fecha':
-                    listaOrdenada.sort((a, b) => new Date(b.fechaPublicacion) - new Date(a.fechaPublicacion));
-                    break;
-                case 'experiencia':
-                    listaOrdenada.sort((a, b) => {
-                        const expA = parseInt(a.experiencia) || 0;
-                        const expB = parseInt(b.experiencia) || 0;
-                        return expB - expA;
-                    });
-                    break;
-            }
-
-            mostrarResultados(listaOrdenada);
-        });
-    </script>
-
+<script src="../scrip/empleo.js"></script>
 
 </body>
 
