--- a/Servicio/Servicio/portal.html
+++ b/Servicio/Servicio/portal.html
@@ -51,11 +51,6 @@
             <button type="submit" class="btn btn-login w-100 mb-3 text-white">Ingresar</button>
             </form>
 
-        <div class="text-center text-muted my-3">O inicia sesión con:</div>
-            <button class="btn social-btn facebook">Facebook</button>
-            <button class="btn social-btn google">Google</button>
-            <button class="btn social-btn linkedin">LinkedIn</button>
-
         <div class="footer-links text-center mt-3">
            <p><a href="#">¿Olvidaste tu contraseña?</a></p>
            <p class="text-black">¿Eres nuevo en el Portal del Empleo?
@@ -167,52 +162,194 @@
 <div class="divider"></div>
 
 <section id="eventos" style="padding-top: 40px;" class="slide-in-left">
-        <h3 style="margin-bottom: 30px;">Próximos Eventos</h3>
-        <div class="cards">
-            <div class="card" style="margin-bottom: 40px;">
-                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c" alt="Evento 1"
-                    style="margin-top: 20px; width: 100%; min-height: 300px; object-fit: contain; display: block;">
-                <div class="card-content" style="margin-top: 20px;">
-                    <h4 style="margin-bottom: 15px;">Feria de Empleo 2025</h4>
-                    <p style="margin-bottom: 20px;">Conoce a empresas líderes y presenta tu currículum en este gran
-                        evento.</p>
-                    <div style="text-align: center; margin-top: 10px;">
-                        <a href="#registro" class="btn">
-                            Regístrarse
-                        </a>
-                    </div>
-                </div>
+  <h3 style="margin-bottom: 30px;">Próximos Eventos</h3>
+
+  <div class="container mt-4">
+    <div class="row justify-content-center">
+
+      <!-- Card 1 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/feria_berriozabal.jpeg" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria Nacional de Empleo y del Emprendimiento Berriozábal 2025</strong></h5>
+            <p class="card-text">
+              Esta innovadora propuesta reconoce la vocación empresarial de Berriozábal y su potencial como centro de desarrollo económico en la región centro del estado.
+              <br><br><br><br><br><br><br><br><br><br>
+              <strong>Fecha:</strong> 2025-07-09<br><br>
+              <strong>Lugar:</strong> Explanada del Parque Central, Berriozábal, Chiapas.
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
             </div>
-            <div class="card" style="margin-bottom: 40px;">
-                <img src="https://images.unsplash.com/photo-1543269865-cbf427effbad" alt="Evento 2"
-                    style="margin-top: 20px; width: 100%; min-height: 300px; object-fit: contain; display: block;">
-                <div class="card-content" style="margin-top: 20px;">
-                    <h4 style="margin-bottom: 15px;">Taller de Entrevistas</h4>
-                    <p style="margin-bottom: 20px;">Aprende a destacar en entrevistas laborales con consejos de
-                        expertos.</p>
-                    <div style="text-align: center; margin-top: 10px;">
-                        <a href="#registro" class="btn">
-                            Regístrarse
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="margin-bottom: 40px;">
-                <img src="https://images.unsplash.com/photo-1533750349088-cd871a92f312" alt="Evento 3"
-                    style="margin-top: 20px; width: 100%; min-height: 300px; object-fit: contain; display: block;">
-                <div class="card-content" style="margin-top: 20px;">
-                    <h4 style="margin-bottom: 15px;">Webinar de Emprendimiento</h4>
-                    <p style="margin-bottom: 20px;">Inspírate con historias de éxito y consejos para emprender tu propio
-                        negocio.</p>
-                    <div style="text-align: center; margin-top: 10px;">
-                        <a href="#registro" class="btn">
-                            Regístrarse
-                        </a>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/feria_sclc.jpeg" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria Nacional de Empleo San Cristóbal de las Casas 2025</strong></h5>
+            <p class="card-text">
+              La Feria Nacional de Empleo San Cristóbal de las Casas 2025 se consolida como el evento laboral más significativo de Los Altos de Chiapas,
+               aprovechando la relevancia cultural, turística y académica de esta ciudad colonial Pueblo Mágico.
+              <br><br><br><br><br><br><br>
+              <strong>Fecha:</strong> 2025-07-09<br><br>
+              <strong>Lugar:</strong> Centro de Convenciones el Carmén, Miguel Hidalgo s/n, Barrio de Santa Lucía, San Cristóbal de las Casas, Chiapas.
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/FeriaOcosingoJunio2025.png" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria Nacional de Empleo Ocosingo 2025</strong></h5>
+            <p class="card-text">
+              La Feria Nacional de Empleo Ocosingo Chiapas 2025 representa una iniciativa transformadora que lleva oportunidades laborales al corazón de la Selva Lacandona.
+              Este evento pionero reconoce el potencial humano y la riqueza cultural de esta región estratégica, conectando a la población local con empresas estatales y 
+              nacionales interesadas en el desarrollo sostenible y la responsabilidad social.
+              <br><br>
+              <strong>Fecha:</strong> 2025-06-19<br><br>
+              <strong>Lugar:</strong> Universidad Tecnológica de la Selva, Ctra Ocosingo - Altamirano entronque Tonina km 0.5, Col. Predio Laltic
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/FeriaLasMargaritasJunioi2025.png" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria Nacional de Empleo Las Margaritas 2025</strong></h5>
+            <p class="card-text">
+              La Feria Nacional de Empleo Las Margaritas Chiapas 2025 constituye una oportunidad histórica para el desarrollo laboral en esta región 
+              fronteriza de gran importancia estratégica. Este evento lleva por primera vez oportunidades de empleo de alcance estatal y 
+              nacional a una comunidad que ha sido pilar fundamental en la economía agrícola y ganadera del estado de Chiapas.
+              <br><br>
+              <strong>Fecha:</strong> 2025-06-18<br><br>
+              <strong>Lugar:</strong> Explanada del Parque Central de las Margaritas
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 5 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/FeriaTapachulaJunio2025.png" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria Nacional de Empleo Tapachula 2025</strong></h5>
+            <p class="card-text">
+              La Feria Nacional de Empleo Tapachula 2025 consolida la vocación de esta ciudad como centro neurálgico del desarrollo económico del 
+              sur-sureste mexicano, ofreciendo perspectivas laborales que contribuyen al crecimiento integral de la zona fronteriza más 
+              dinámica del país.
+              <br><br><br>
+              <strong>Fecha:</strong> 2025-06-09<br><br>
+              <strong>Lugar:</strong> Hotel Holiday Inn, Ctra. a Puerto Madero, KM 3.5 Col. Las Hortensias, C.P. 30797
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 6 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/FeriaTonala.jpeg" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria de Empleo Tonalá 2025</strong></h5>
+            <p class="card-text">
+              La Feria de Empleo Tonalá 2025 representa una plataforma estratégica para impulsar la activación económica y laboral en este municipio emblemático.
+              <br><br><br><br><br><br><br><br><br>
+              <strong>Fecha:</strong> 2025-05-23<br><br>
+              <strong>Lugar:</strong> Explanada del Parque Central
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 7 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/FeriaVirtual2025.jpeg" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria Virtual de Empleo 2025</strong></h5>
+            <p class="card-text">
+              La Feria Virtual de Empleo 2025 representa una plataforma estratégica para impulsar la activación económica y laboral en el estado.
+              <br><br><br><br>
+              <strong>Fecha:</strong> 2025-05-22<br><br>
+              <strong>Lugar:</strong> Online
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 8 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/DiaEmpleoTuxtla.jpeg" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Día por el Empleo Tuxtla Gutiérrez</strong></h5>
+            <p class="card-text">
+             En un ambiente dinámico y profesional, los asistentes tendrán acceso a vacantes de diversos sectores económicos representativos de Tuxtla Gutiérrez y sus alrededores.
+              <br><br>
+              <strong>Fecha:</strong> 2025-05-20<br><br>
+              <strong>Lugar:</strong> Parque Central de Plan de Ayala.
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 9 -->
+      <div class="col-md-4 mb-3">
+        <div class="card h-100">
+          <img src="https://empleos.chiapas.gob.mx/Img/FeriaEscuintla.jpeg" class="card-img-top" alt="...">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title"><strong>Feria de Empleo Escuintla 2025</strong></h5>
+            <p class="card-text">
+             La Feria de Empleo Escuintla 2025 es un evento estratégico que reúne a las principales empresas e instituciones de la región 
+             con ciudadanos en búsqueda de oportunidades laborales.
+              <br><br>
+              <strong>Fecha:</strong> 2025-05-08<br><br>
+              <strong>Lugar:</strong> Explanada del Parque Central.
+            </p>
+            <div class="text-center mt-auto">
+              <a href="#" class="btn btn-primary">Inscribirse</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </section>
+
 
 <div class="divider"></div>
 
