--- a/Servicio/Servicio/registro.html
+++ b/Servicio/Servicio/registro.html
@@ -55,13 +55,8 @@
                         <label class="form-check-label" for="mantenerme" style="color: #000;">Mantenerme
                             registrado</label>
                     </div>
-                    <button type="submit" class="btn btn-login w-100 mb-3">Ingresar</button>
+                    <button type="submit" class="btn-login w-100 mb-3">Ingresar</button>
                 </form>
-
-                <div class="text-center text-muted my-3">O inicia sesión con:</div>
-                <button class="btn social-btn facebook">Facebook</button>
-                <button class="btn social-btn google">Google</button>
-                <button class="btn social-btn linkedin">LinkedIn</button>
                 <div class="footer-links text-center mt-3">
                     <p><a href="#">¿Olvidaste tu contraseña?</a></p>
                     <p><span style="color: #000;">¿Eres nuevo en el Portal del Empleo?</span> <a href="#">Regístrate
